# git-paravendor

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  config  git-paravendor
.github/workflows/: test.yml
src/: main.rs
test/: test.bats
